kubernetes/sensu-daemonset.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: sensu-agent
spec:
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: sensu-agent
  template:
    metadata:
      labels:
        app: sensu-agent
    spec:
      tolerations: []
      terminationGracePeriodSeconds: 30
      hostPID: true
      hostIPC: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes: []
      containers:
      - name: sensu-agent
        image: sensu/sensu:6.8.1
        command: [
          "/opt/sensu/bin/sensu-agent", "start",
          "--detect-cloud-provider", "true",
          "--log-level", "debug",
        ]
        ports:
        - containerPort: 3030
          hostPort: 3030
          protocol: TCP
        - containerPort: 3031
          hostPort: 3031
          protocol: TCP
        resources:
          # limits:
          #   cpu: 1.0
          #   memory: 1024M
          # requests:
          #   cpu: 0.5
          #   memory: 256M
