kubernetes/sensu-backend.yaml
---
# headless service for sensu-etcd statefulset DNS
apiVersion: v1
kind: Service
metadata:
  name: sensu-etcd
spec:
  selector:
    app: sensu-etcd
  clusterIP: None
  ports:
  - name: sensu-etcd-client
    protocol: TCP
    port: 2379
  - name: sensu-etcd-server
    protocol: TCP
    port: 2380

---
# headless service for sensu-backend statefulset DNS
apiVersion: v1
kind: Service
metadata:
  name: sensu
spec:
  selector:
    app: sensu
  clusterIP: None
  ports: []

---
# load balancer for cluster-external access to sensu-backends (web + API + transport)
apiVersion: v1
kind: Service
metadata:
  name: sensu-lb
spec:
  selector:
    app: sensu
  type: LoadBalancer
  ports:
  - name: sensu-api
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: sensu-transport
    protocol: TCP
    port: 8081
    targetPort: 8081
  - name: sensu-webui
    protocol: TCP
    port: 80
    targetPort: 3000

---
# standalone etcd w/ sensu-agent sidecar
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sensu-etcd
spec:
  selector:
    matchLabels:
      app: sensu-etcd
  serviceName: sensu-etcd
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: sensu-etcd
    spec:
      # storageClassName: faster
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: 20Gi
  - metadata:
      name: sensu-etcd-tls
    spec:
      storageClassName: sensu-azurefile
      accessModes:
        - "ReadWriteMany"
      resources:
        requests:
          storage: 5Gi
  template:
    metadata:
      labels:
        app: sensu-etcd
    spec:
      terminationGracePeriodSeconds: 60
      volumes:
      - name: sensu-etcd
        persistentVolumeClaim:
          claimName: sensu-etcd
      - name: sensu-etcd-tls
        persistentVolumeClaim:
          claimName: sensu-etcd-tls
      - name: sensu-asset-server-ca-cert
        secret:
          secretName: sensu-asset-server-ca-cert
          defaultMode: 256
          optional: true
      containers:
      - name: etcd
        image: gcr.io/etcd-development/etcd:v3.5.5
        command: ["/bin/bash","-c"]
        args: [
          "apt update && apt install wget -y && /usr/local/bin/etcd --data-dir /var/lib/etcd --initial-cluster-state new --name $(ETCDPOD_NAME) --listen-client-urls http://0.0.0.0:2379 --election-timeout=50000 --advertise-client-urls http://$(ETCDPOD_NAME):2379",
        ]
        volumeMounts:
        - name: sensu-etcd
          mountPath: /var/lib/etcd
        - name: sensu-etcd-tls
          mountPath: /etc/sensu/tls
        ports:
        - protocol: TCP
          containerPort: 2379
        - protocol: TCP
          containerPort: 2380
        resources:
          # requests:
          #   memory: 2048M
          #   cpu: 1.0
          # limits:
          #   memory: 4096M
          #   cpu: 2.0
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          exec:
            command:
            - wget
            - --no-check-certificate
            - -q
            - -O-
            - http://127.0.0.1:2379/health

      - name: sensu-agent
        image: sensu/sensu:6.8.1
        command: [
          "/opt/sensu/bin/sensu-agent", "start",
          "--log-level", "warn",
        ]
        volumeMounts: []
        ports: []

---
# sensu-backend cluster w/ sensu-agent sidecars
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sensu-backend
spec:
  selector:
    matchLabels:
      app: sensu
  serviceName: sensu
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sensu
    spec:
      volumes:
      - name: sensu-asset-server-ca-cert
        secret:
          secretName: sensu-asset-server-ca-cert
          defaultMode: 256
          optional: true
        - name: sensu-etcd-tls
          persistentVolumeClaim:
            claimName: sensu-etcd-tls-sensu-etcd-0
      containers:
      - name: sensu-backend
        image: sensu/sensu:6.8.1
        command: ["/bin/sh","-c"]
        args: [
          "apk add bind-tools && IP=$(dig +short sensu-etcd-0.sensu-etcd.sensu-system.svc.cluster.local | head -1) && echo -e $IP' \t 'sensu-etcd-0.sensu-etcd.sensu-system.svc.cluster.local' \t 'sensu-etcd-0 >> /etc/hosts && /opt/sensu/bin/sensu-backend start --log-level debug --debug true --no-embed-etcd --etcd-client-urls http://sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local:2379 --etcd-name sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local",
        ]
        volumeMounts:
          - name: sensu-etcd-tls
            mountPath: /etc/sensu/tls
        ports:
        - protocol: TCP
          containerPort: 8080
        - protocol: TCP
          containerPort: 8081
        - protocol: TCP
          containerPort: 3000
        resources:
          # requests:
          #   memory: 2048M
          #   cpu: 1.0
          # limits:
          #   memory: 4096M
          #   cpu: 2.0
        readinessProbe:
         initialDelaySeconds: 180
         periodSeconds: 30
         timeoutSeconds: 20
         exec:
           command:
           - wget
           - -q
           - -O-
           - http://127.0.0.1:8080/health

      - name: sensu-agent
        image: sensu/sensu:6.8.1
        command: [
          "/opt/sensu/bin/sensu-agent", "start",
          "--detect-cloud-provider", "true",
          "--log-level", "warn",
        ]
        volumeMounts: []
        ports: []
