kubernetes/sensu-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sensu-tls
  namespace: sensu-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sensu.vthul-it.nl`)
      services:
        - name: sensu-lb
          port: 3000
  tls:
    store:
      name: default
